// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CardDetails component matches the snapshot when given specific props 1`] = `
Array [
  .c1 ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c1 li {
  position: relative;
  margin-left: 16px;
}

.c1 li:before {
  content: "✓";
  color: #77b227;
  position: absolute;
  font-weight: bold;
  display: inline-block;
  left: -16px;
}

.c0 {
  margin-bottom: 12px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <div
      className="c1"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Do you know the essential first step of good SEO? It’s keyword research. In this training, 
you’ll learn how to research and select the keywords that will guide searchers to your pages.",
        }
      }
    />
  </div>,
  .c1 {
  color: #000;
  white-space: nowrap;
  display: block;
  border-radius: 4px;
  background-color: #ddd;
  padding: 12px 16px;
  box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  font-size: inherit;
  margin-bottom: 8px;
}

.c1:hover,
.c1:focus,
.c1:active {
  color: #000;
  background-color: #cecece;
}

.c1:active {
  background-color: #cecece;
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
  -webkit-filter: none;
  filter: none;
}

.c2 {
  font-weight: bold;
}

.c0 {
  text-align: center;
}

<div
    className="c0"
  >
    <a
      className="c1"
      href="https://yoast.com/cart/?add-to-cart=1311259"
      rel={null}
      target="_blank"
    >
      Start your free trail
      <span
        className="A11yNotice-sc-1feyioo-0 gHCoqL"
      >
        (Opens in a new browser tab)
      </span>
    </a>
    <a
      className="c2"
      href="https://yoast.com/academy/keyword-research-training/"
      rel={null}
      target="_blank"
    >
      Read more about this training »
      <span
        className="A11yNotice-sc-1feyioo-0 gHCoqL"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>,
]
`;

exports[`The empty CardDetails component matches the snapshot 1`] = `
Array [
  .c1 ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c1 li {
  position: relative;
  margin-left: 16px;
}

.c1 li:before {
  content: "✓";
  color: #77b227;
  position: absolute;
  font-weight: bold;
  display: inline-block;
  left: -16px;
}

.c0 {
  margin-bottom: 12px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
    className="c0"
  >
    <div
      className="c1"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </div>,
  .c1 {
  cursor: pointer;
  color: #000;
  white-space: nowrap;
  display: block;
  border-radius: 4px;
  background-color: #fec228;
  padding: 12px 16px;
  box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  font-size: inherit;
  margin-top: 0;
  margin-bottom: 8px;
}

.c1:hover,
.c1:focus,
.c1:active {
  color: #000;
  background: #f2ae01;
}

.c1:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
  -webkit-filter: none;
  filter: none;
}

.c2 {
  font-weight: bold;
}

.c0 {
  text-align: center;
}

<div
    className="c0"
  >
    <a
      className="c1"
      href={undefined}
      rel={null}
      target="_blank"
    >
      <span
        className="A11yNotice-sc-1feyioo-0 gHCoqL"
      >
        (Opens in a new browser tab)
      </span>
    </a>
    <a
      className="c2"
      href=""
      rel={null}
      target="_blank"
    >
      
      <span
        className="A11yNotice-sc-1feyioo-0 gHCoqL"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>,
]
`;
